# gallery

./: .gitignore  Makefile  README.md  keras  release_quickstart_image.sh
bentomlflow/: mlflow-to-bentoml-example.ipynb
custom_python_model/: README.md  requirements.txt
end-to-end-sagemaker-deployment/: MovieReview-sagemeker-deployment.py
inference_graph/: bentofile.yaml  deployment.yaml  requirements.txt  service.py  train.py
kfserving/: requirements.txt  service.py
legacy-keras/: README.md
mlflow/: .gitignore
models/: seq2seq.pt
paddleOCR/: BentoML_PaddleOCR.ipynb
pydantic_validation/: service.py
pytorch/: README.md  bentofile.yaml  pytorch_mnist_demo.ipynb  requirements.txt  service.py  train.py
pytorch_mnist/: README.md  pytorch_mnist_demo.ipynb  requirements.txt  service.py  train.py
pytorch_seq2seq/: .bentoignore  README.md  bentofile.yaml  import_model.py  locustfile.py  model.py  mytraining.pt  pytorch_seq2seq.ipynb  pytorch_tldr_demo.ipynb  requirements.txt  service.py  summarizer.pt  train.py
pytorch_yolov5_torchhub/: detect.py  export.py  locustfile.py  pytorch_yolov5_torchhub_demo.ipynb  service.py  train.py  val.py
quickstart/: README.md  bentofile.yaml  iris_classifier.ipynb  iris_classifier.py  locustfile.py  requirements.txt  service.py  train.py
scripts/: new_gallery_project.py  requirements.txt
sql-server-deployment/: serve-bento-bundle.sql  (+1 more)
templates/: README.md  (+1 more)
transformers/fine_tune/: .gitignore  bentofile.yaml  config.py  fine_tune_roberta.ipynb  locustfile.py  setup.cfg
transformers/fine_tune/tests/: conftest.py
(+265 files in other folders)
