[metadata]
name = bentoml
version = 0.0.0
description = bentoml: A framework for machine learning model serving
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bentoml/gallery/transformers/
author = BentoML Team
author_email = contact@bentoml.ai

[options]
python_requires = >=3.6
include_package_data = True
setup_requires =
    setuptools>=59.0
    setuptools-scm>=6.2.3
    wheel
zip_safe = False

[global]
verbose = true

[bdist_wheel]
universal = False
keep_temp = true

[sdist]
formats = gztar

[coverage:run]
omit =
    transfer_learning

[coverage:report]
show_missing = true
precision = 2
omit =
    transfer_learning
exclude_lines =
    pragma: no cover
    if TYPE_CHECKING:
